# pycd48

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  BEST_PRACTICES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  winpy
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: README.md  accidental_analysis.py  calibrate_trigger.py  continuous_collection.py  cosmic_ray_telescope.py  data_logger.py  device_info.py  overflow_demo.py  pycd48_tutorial.ipynb  realtime_monitor.py  run_yaml_experiment.py  simple_counting.py  voltage_sweep.py
examples/configs/: README.md  continuous_monitoring.yaml  cosmic_ray_telescope.yaml  rate_measurement.yaml  simple_coincidence.yaml  voltage_sweep.yaml
pycd48/: __init__.py  async_cd48.py  cd48.py  config.py  constants.py  experiments.py  logging.py  plotting.py  protocols.py  utils.py
tests/: __init__.py  test_async_cd48.py  test_cd48.py  test_experiments.py  test_reconnect_config.py
web/: README.md  cd48.js  index.html
