[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pycd48"
version = "0.1.0"
description = "Python interface for the Red Dog Physics CD48 Coincidence Counter"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "OpenPhysics Contributors"},
]
keywords = ["physics", "coincidence", "counter", "cd48", "instrumentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyserial>=3.5",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
async = [
    "aioserial>=1.3.0",
]
yaml = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]
all = [
    "aioserial>=1.3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "ruff>=0.4.0",
    "mypy>=0.950",
    "pre-commit>=2.20",
    "ipython>=8.0",
    "aioserial>=1.3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pycd48*"]

[tool.setuptools.package-data]
pycd48 = ["py.typed"]

[project.urls]
Homepage = "https://github.com/OpenPhysics/pycd48"
Documentation = "https://github.com/OpenPhysics/pycd48#readme"
Repository = "https://github.com/OpenPhysics/pycd48"
"Bug Tracker" = "https://github.com/OpenPhysics/pycd48/issues"

[tool.black]
line-length = 100
target-version = ['py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pycd48 --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
# Strict type checking
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
disallow_any_explicit = true
no_implicit_reexport = true
# Warnings
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
# Other settings
ignore_missing_imports = true
exclude = ["examples/"]

# Allow Any in pydantic's internal implementation
[[tool.mypy.overrides]]
module = "pydantic"
disallow_any_explicit = false

# Allow Any in experiments.py due to Pydantic model usage
[[tool.mypy.overrides]]
module = "pycd48.experiments"
disallow_any_explicit = false
warn_unused_ignores = false

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E203"]
